--- a/main.css
+++ b/main.css
@@ -15,3 +15,12 @@
   text-align: center;
   
 }
+.footer  {
+  background-color: SlateGray;
+  padding: 30px 100px;
+  font-size: 32px;
+  color: #fff;
+  font-family: sans-serif;
+  text-align: center;
+  
+}
